# lib-pdfoxide

./: .gitignore  CHANGELOG.md  CSHARP_BENCHMARKS.md  CSHARP_PHASE3_PLAN.md  Cargo.toml  FEATURE_PARITY.md  README.md  deny.toml  pyproject.toml  rylai.toml
.github/codeql/: codeql-config.yml
.github/scripts/: extract-release-notes.sh  test-extract-release-notes.sh
.github/workflows/: changelog.yml  ci-fips.yml  ci.yml  clojure.yml  codeql.yml  cpp.yml  dart.yml  elixir.yml  julia.yml  kotlin.yml  objc.yml  outdated.yml  php.yml  python.yml  r.yml  release-fips.yml  release.yml  ruby.yml  scala.yml  scorecard.yml  swift.yml  version-consistency.yml  zig.yml
clojure/: .cljfmt.edn  README.md  build.clj  deps.edn
cpp/: .clang-tidy  CMakeLists.txt  README.md  conanfile.py
cpp/cmake/: pdf_oxide_cppConfig.cmake.in
cpp/examples/: 01_basic_extraction.cpp  02_html_extraction.cpp  03_words_geometry.cpp  04_tables_extraction.cpp
cpp/include/pdf_oxide/: pdf_oxide.hpp
cpp/tests/: test_api_coverage.cpp
csharp/: README.md
csharp/PdfOxide/: PdfOxide.csproj
csharp/PdfOxide.Benchmarks/: AnnotationBenchmarks.cs  ElementBenchmarks.cs  ImageAndMemoryBenchmarks.cs  PdfOxide.Benchmarks.csproj  Program.cs  SearchBenchmarks.cs
csharp/PdfOxide.Tests/: ApiCoverageTests.cs  BindingParityOcrModelsTests.cs  BindingParitySanitizeSignTests.cs
dart/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
dart/example/: basic_extraction.dart  html_extraction.dart  tables_extraction.dart  words_geometry.dart
dart/lib/: pdf_oxide.dart
dart/test/: api_coverage_test.dart
docs/: BINDING_API_CONTRACT.md  CRYPTO_PROVIDERS.md  OCR_GUIDE.md  RELEASING-bindings.md  getting-started-wasm.md
elixir/: .credo.exs  .formatter.exs  CHANGELOG.md  LICENSE  Makefile  README.md  mix.exs
elixir/c_src/: pdf_oxide_nif.c
elixir/examples/: basic_extraction.exs  html_extraction.exs  tables_extraction.exs  words_geometry.exs
elixir/lib/: pdf_oxide.ex
elixir/test/: pdf_oxide_test.exs
examples/: classify_probe.rs  dump_text.rs
go/: api_coverage_extended_test.go  binding_parity_ocr_models_test.go  binding_parity_sanitize_sign_test.go  go.mod  ocr_unclip_verify_test.go  pdf_oxide.go  purego_parity_ocr_models_test.go  purego_parity_sanitize_sign_test.go
java/: pom.xml
js/: README.md  binding.cc  package.json
js/src/: index.ts
js/tests/: binding-parity-ocr-models.test.mjs  binding-parity-sanitize-sign.test.mjs  xfa-forms.test.ts
julia/: Project.toml  README.md
julia/examples/: basic_extraction.jl  html_extraction.jl  tables_extraction.jl  words_geometry.jl
julia/src/: PdfOxide.jl
julia/test/: runtests.jl
kotlin/: .editorconfig  README.md  build.gradle.kts  detekt.yml  settings.gradle.kts
nodejs/: API_GUIDE.md  Cargo.toml  PHASE1_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PART2_PROGRESS.md  PHASE4_PROGRESS.md  PHASE5_COMPLETE.md  PROJECT_COMPLETE.md  README.md  index.js  package.json
nodejs/examples/: annotations-and-search.js  forms-and-metadata.js
nodejs/src/: document.rs
objc/: .clang-format  Makefile  PUBLISHING.md  PdfOxide.podspec  README.md
objc/examples/: basic_extraction.m  html_extraction.m  tables_extraction.m  words_geometry.m
objc/include/: POXPdfOxide.h
objc/src/: POXPdfOxide.m
objc/tests/: test_api_coverage.m
pdf_oxide_cli/: Cargo.toml  sbom.cdx.json
pdf_oxide_cli/src/cli/: args.rs  mod.rs  repl.rs
pdf_oxide_cli/src/cli/commands/: text.rs
pdf_oxide_cli/tests/: structured_format.rs
pdf_oxide_jni/: Cargo.toml
pdf_oxide_mcp/: Cargo.toml  sbom.cdx.json
pdf_oxide_mcp/src/: extract.rs  protocol.rs
php/include/: pdf_oxide.h
php/scripts/: download-native-lib.php
php/src/: Pdf.php
python/: README.md
python/tests/: test_binding_parity_sanitize_sign.py  test_core_parity.py
r/: .Rbuildignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  README.md
r/R/: pdf_oxide.R
r/man/: pdf_extract_text.Rd  pdf_from_markdown.Rd  pdf_has_structure_tree.Rd  pdf_is_encrypted.Rd  pdf_open.Rd  pdf_open_bytes.Rd  pdf_page_count.Rd  pdf_save.Rd  pdf_save_to_bytes.Rd  pdf_to_markdown_all.Rd  pdf_version.Rd  pdfoxide-package.Rd
r/src/: Makevars  pdf_oxide.c  symbols.rds
ruby/lib/: pdf_oxide.rb
ruby/spec/: api_coverage_extended_spec.rb  cdylib_smoke_spec.rb  core_parity_spec.rb
scala/: .scalafix.conf  .scalafmt.conf  README.md  build.sbt
scala/project/: plugins.sbt
scripts/: check_span_spacing.py  check_stub_parity.py  requirements.txt  sync_version.py  verify_suite.py
src/: color.rs  document.rs  error.rs  ffi.rs  lib.rs  object.rs  outline.rs  python.rs  structured.rs  wasm.rs  xref.rs  xref_reconstruction.rs
src/api/: pdf_builder.rs
src/compliance/: converter.rs  types.rs  validators.rs
src/content/: graphics_state.rs
src/crypto/: active.rs  (+5 more)
swift/: .swift-format  Package.swift  README.md
target-wheel/: .rustc_info.json
tests/: core_parity.rs  full_width_header_columns_md.rs  issue_458_article_threads.rs  issue_734_tagged_structure.rs  issue_734_two_column_text_order.rs  regression_targets_and_locks.rs  rw1e_form_bbox_clip.rs  seg_indic_functional.rs  seg_ko_functional.rs  test_4byte_character_codes.rs  test_actualtext_extraction.rs  test_advanced_cmap_features.rs  test_ascent_descent_font_metrics.rs  test_barcode_svg.rs  test_cff_font_support.rs  test_character_mapping_fixes.rs  test_cmap_caching.rs  test_cmap_multibyte_parsing.rs  test_concurrent_document_reads.rs  test_corpus_extraction_quality.rs  test_custom_encoding.rs  test_font_cache_cross_document.rs  test_high_level_api.rs  test_html_to_pdf_e2e.rs  test_image_embedding.rs  test_issue_395_render_page.rs  test_issue_447_page_indices.rs  test_issue_456_path_open_source_bytes.rs  test_issue_509_header_offset.rs  test_lazy_cmap_loading.rs  test_liteparse_pdx_regressions.rs  test_multibyte_cid_support.rs  test_ocg_ink_filtering.rs  test_ocr.rs  test_optimized_cmap_parsing.rs  test_path_extraction.rs  test_path_to_points.rs  test_pipeline_html_converter.rs  test_predefined_cmap_loading.rs  test_predefined_cmaps.rs  (+29 more)
wasm-pkg/: package.json
zig/: README.md  build.zig  build.zig.zon
(+942 files in other folders)
